# firmoto

./: .gitignore  Docs.md  README.md
clients/csharp/: firmoto-client-csharp.csproj
clients/rust/: Cargo.toml
concrete/: Cargo.toml
firmware/: Cargo.toml  justfile
firmware/src/: allocator.rs  builders.rs  controllers.rs  dispatcher.rs  errors.rs  lib.rs  mocks.rs  platforms.rs  request_mappers.rs  response_mappers.rs  schema_generated.rs  service_wrappers.rs  services.rs  transport.rs
firmware/src/builders/: spi_dev_builder.rs
firmware/src/controllers/: can_controller.rs  controller_result.rs  gpio_controller.rs  hello_world_controller.rs  i2c_controller.rs  i2s_controller.rs  modbus_controller.rs  spi_controller.rs  uart_controller.rs
firmware/src/errors/: can_controller.rs  flatbuffer_request_parse_err.rs  get_err_msg_trait.rs  gpio_controller.rs  hello_world_controller.rs  i2c_controller.rs  i2s_controller.rs  modbus_controller.rs  spi_controller.rs  transport.rs  uart_controller.rs
firmware/src/request_mappers/: hello_world_request.rs  spi_read_u16_request.rs  spi_read_u8_request.rs  spi_write_then_read_request.rs  spi_write_u8_request.rs
firmware/src/response_mappers/: hello_world_response.rs  spi_read_u16_response.rs  spi_read_u8_response.rs  spi_write_then_read_response.rs  spi_write_u8_response.rs
firmware/src/service_wrappers/: can_service_wrapper.rs  gpio_service_wrapper.rs  i2c_service_wrapper.rs  i2s_service_wrapper.rs  modbus_service_wrapper.rs  uart_service_wrapper.rs
firmware/src/services/: service_traits.rs  spi_service.rs  spi_service_traits.rs
firmware/tests/: integration.rs
flatbuffers/: justfile
flatbuffers/c/: firmoto_schema_generated.h
flatbuffers/cpp/: firmoto_schema_generated.h  monster_generated.h
flatbuffers/csharp/Firmoto/: Operation.cs  ReturnValue.cs  Value.cs  ValueType.cs
flatbuffers/fbs/: firmoto_schema.fbs
flatbuffers/go/Firmoto/: Operation.go  ReturnValue.go  SubOperationType.go  Value.go
flatbuffers/java/Firmoto/: Operation.java  OperationT.java  ReturnValueT.java  SubOperationType.java  Value.java  ValueT.java
flatbuffers/kotlin/Firmoto/: Operation.kt  OperationType.kt  SubOperationType.kt  Value.kt
flatbuffers/python/Firmoto/: Operation.py  ReturnValue.py  SubOperationType.py  Value.py
flatbuffers/rust/: firmoto_schema_generated.rs  monster_generated.rs
flatbuffers/typescript/: firmoto.ts  firmoto_schema.ts
flatbuffers/typescript/firmoto/: operation-type.ts  operation.ts  sub-operation-type.ts  value-type.ts  value.ts
generic/: Cargo.toml
macro/: Cargo.toml  justfile
macro/src/: from_vec_value_t_to_concrete_type.rs  lib.rs
macro/tests/expand/: test_from_vec_t_to_concrete_type.expanded.rs  test_from_vec_t_to_concrete_type.rs
nostd_playground/: Cargo.toml  justfile
nostd_playground/.cargo/: config.toml
nostd_playground/src/: allocator.rs  controllers.rs  dispatcher.rs  firmoto_schema_generated.rs  lib.rs  service_provider.rs  services.rs
nostd_playground/src/builders/: spi_dev_builder.rs
nostd_playground/src/controllers/: spi_controller.rs
nostd_playground/src/service_wrappers/: spi_service_wrapper.rs
nostd_playground/src/services/: concrete_spi_service.rs  mock_spi_service.rs  singleton_spi_service.rs  spi_service.rs
nostd_playground/src/utils/: logger.rs
nostd_playground/tests/: integration.rs
playground/: Cargo.toml  justfile
playground/src/: dispatcher.rs  firmoto_schema_generated.rs  lib.rs  services.rs
playground/src/controllers/: spi_controller.rs
playground/src/services/: spi_service.rs
schema/: justfile
schema/c/: firmoto_schema_generated.h
schema/cpp/: schema_generated.h
schema/csharp/Firmoto/: FieldBool.cs  FieldDouble.cs  FieldFloat.cs  FieldI16.cs  FieldI32.cs  FieldI64.cs  FieldI8.cs  FieldString.cs  FieldType.cs  FieldU16.cs  FieldU32.cs  FieldU64.cs  FieldU8.cs  OperationType.cs  SubOperationType.cs  Value.cs
schema/fbs/: bpio.fbs  schema.fbs
schema/go/Firmoto/: FieldBool.go  FieldDouble.go  FieldFloat.go  FieldI16.go  FieldI32.go  FieldI64.go  FieldI8.go  FieldString.go  FieldType.go  FieldU16.go  FieldU32.go  FieldU64.go  FieldU8.go  OperationType.go  SubOperationType.go  Value.go  ValueType.go
schema/java/Firmoto/: FieldBool.java  FieldBoolT.java  FieldDouble.java  FieldDoubleT.java  FieldFloat.java  FieldFloatT.java  FieldI16.java  FieldI16T.java  FieldI32.java  FieldI32T.java  FieldI64.java  FieldI64T.java  FieldI8.java  FieldI8T.java  FieldString.java  FieldStringT.java  FieldType.java  FieldTypeUnion.java  FieldU16.java  FieldU16T.java  FieldU32.java  FieldU32T.java  FieldU64.java  FieldU64T.java  FieldU8.java  FieldU8T.java  OperationType.java  ReturnValue.java  SubOperationType.java  Value.java  ValueT.java  ValueType.java
schema/kotlin/Firmoto/: FieldBool.kt  FieldDouble.kt  FieldFloat.kt  FieldI16.kt  FieldI32.kt  FieldI64.kt  FieldI8.kt  FieldString.kt  FieldType.kt  FieldU16.kt  FieldU32.kt  FieldU64.kt  FieldU8.kt  OperationType.kt  ReturnValue.kt  SubOperationType.kt  Value.kt  ValueType.kt
schema/python/Firmoto/: FieldBool.py  FieldDouble.py  FieldFloat.py  FieldI16.py  FieldI32.py  FieldI64.py  FieldI8.py  FieldString.py  FieldType.py  FieldU16.py  (+8 more)
schema/rust/: schema_generated.rs
schema/typescript/: firmoto.ts
(+20 files in other folders)
