[package]
authors = ["Ahsanu Amala <caasperahsanuamala5@gmail.com>"]
name = "firmoto"
edition = "2024"
version = "0.1.0"

# To run all the tests via `cargo test` the tests need to be explicitly disabled for the binary targets
# If you use a standard main.rs file the following is sufficient:
# [[bin]]
# name = "nostd_playground"
# test = false

[lib]
harness = false

[dependencies]
embassy-embedded-hal = "0.5.0"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embedded-alloc = {version = "0.6.0", features=["llff"]}
embedded-hal = "1.0.0"
static_cell = "2.1.1"

[dependencies.flatbuffers]
version = "25.9.23"
default-features = false            # disables std

[dev-dependencies]
defmt-test = "0.3"

[features]
default = ["platform_mock"]
platform_mock = []
platform_stm32 = []
platform_esp32 = []

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
debug = 2
